(fix) css spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,7 +119,7 @@ z-index: 5;
 
 #flashalert, #flashnotice{
 	text-align: right;
-	top: 24px;
+	top: 34px;
 	right: 14px;
 	position: fixed;
 	z-index: 5;
